@@ -1,3 +1,10 @@
+2012-10-10  Igor Pashev  <pashev.igor@gmail.com>
+	    Andrey G, Grozin  <A.G.Grozin@inp.nsk.su>
+	    Gabriel Dos Reis  <gdr@cs.tamu.edu>
+
+	* utils/command.cc (build_rts_options) [sbcl_runtime]: Inhibit
+	system-wide and user-supplied initialization files.
+
 2012-08-26  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
 	* hyper/hthits.c (splitpage): Revert unintended change from last
