@@ -1,3 +1,10 @@
+2012-10-10  Igor Pashev  <pashev.igor@gmail.com>
+	    Andrey G, Grozin  <A.G.Grozin@inp.nsk.su>
+	    Gabriel Dos Reis  <gdr@cs.tamu.edu>
+
+	* config/open-axiom.m4 (OPENAXIOM_LISP_FLAGS): Inhibit system-wide
+	or user-supplied initialization files.
+
 2012-08-19  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
 	* configure.ac: Define Automake conditional OA_DELAYED_FFI.
